--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,14 @@ h1 {
   padding: 2rem 0;
   margin: 0 auto;
 }
+
+main {
+  min-height: calc(100vh - 85px - 22px);
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.active {
+  color: var(--color-bg-hover);
+  cursor: default;
+}
